# -

./: .env.example  .gitignore  README.md  SETUP_GUIDE.md  drizzle.config.ts  index.html  metadata.json  package-lock.json  package.json  seed.ts  server.ts  setup.ps1  setup.sh  sqlite_db.db  sqlite_db_corrupt.db  sqlite_db_old_corrupt.db
.github/workflows/: build.yml  ci.yml  electron-build.yml  release.yml
drizzle/: 0000_famous_reptil.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
electron/: create-icon.js  loading.html  main.cjs  main.dev.ts  main.ts  preload.cjs  preload.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.txt
src-tauri/src/: main.rs
src/components/: DataTable.tsx  DataTableColumnHeader.tsx  Layout.tsx  LoadingSpinner.tsx
src/components/ui/: dialog.tsx  sheet.tsx  sidebar.tsx  table.tsx  textarea.tsx
src/db/: drizzle.config.ts  index.ts  schema.ts  seed.ts
src/hooks/: useLoading.ts
src/lib/: api.ts  auth.tsx  utils.ts
src/pages/: Assets.tsx  Dashboard.tsx  Finance.tsx  Inventory.tsx  Login.tsx  Patients.tsx  Reports.tsx  Rooms.tsx  Services.tsx  Settings.tsx  Stays.tsx
src/pages/finance/: columns.tsx
src/pages/patients/: columns.tsx
src/pages/services/: columns.tsx
